Prevent text overflow in errors

--- a/sao/src/theme/coog/sao.less
+++ b/sao/src/theme/coog/sao.less
@@ -1202,3 +1202,8 @@ div.infobar {
         max-width: 100%;
     }
 }
+
+// Prevent text overflow in errors
+.alert h4{
+    word-break: break-all;
+}
